  causes .dot files to be compatible with OmniGraffle, which otherwise fails
  to import graphs with HTML node labels (issue reported by Lucas Florio,
  implementation based on template by Troy Anderson).
* Prevent models named after Graphviz reserved words (Node, Edge) from causing
  errors in .dot files (reported by gguthrie).

=== 0.4.3:

* Display the scale of decimal attributes when set. A decimal attribute with
  precision 5 and scale 2 is now indicated with (5,2).
* Fixed deprecation warnings for edge Rails (upcoming 3.1).

=== 0.4.1:

* Fix processing of associations with class_name set to absolute module paths.
* Adjust model loading process to include models in non-standard paths eagerly.

=== 0.4.0:

* Support to optionally display single table inheritance relationships
  (inheritance=true).
* Support to optionally display polymorphic associations (polymorphism=true).
* Adjustments to 'advanced' style so that it matches original Bachman style,
  and therefore now called 'bachman'.
* Ignore models without tables (reported by Mark Chapman).
* Mutual indirect relationships are now combined.
* Changed API for diagram generation.
* Restructured classes and renamed several API properties and methods.
* Added new edge type to describe single table inheritance and polymorphic
  associations: Specialization.
* Added compatibility for Active Record 3.1 (beta), removed dependency on Arel.
* Rubinius compatibility.

=== 0.3.0:

* Added the ability to support multiple styles of cardinality notations.
  Currently supported types are 'simple' and 'advanced'.
* Added option to exclude indirect relationships (indirect=false).
* Added option to change or disable the diagram title (title='Custom title').
* Altered the type descriptions of attributes.
* Renamed options for flexibility and clarity.
* Improved internal logic to determine the cardinality of relationships.
* More versatile API that allows you to inspect relationships and their
  cardinalities.